			  - 2002-07-17:	 The check for unique fields (like username) is now case-insensitive, so 'Name' and 'name' won't be allowed for two different users  (Niels)
			  - 2002-07-22:  Although the error string was present in translations, actually no checks were made on zone cache limit  (Matteo)


v 2.0beta6.1		+ Minor speed improvements in view.inc.php  (Niels) 20011015
			+ Added support for URL banner variables during regular remote invocation  (Niels) 20011016

			+ Misc bugfixes
			  - Fixed pass by reference warnings in lib-ftp.inc.php  (Niels) 20011015
			  - HTML and URL banner variables should work correctly again  (Niels) 20011016
			  - Fixed exploit where users could excute arbitrary code on the server  (Niels) 20011016


v 2.0beta6		+ Added search capabilities  (Niels and Tobi Schulz)
			+ Added expiration details to campaign index  (Niels)
			+ Added the ablity to get the IP adress of users behind a proxy server  (Niels & Mesut Tunga)
			+ Added ability to specify a browser-status text for each banner  (Niels)
			+ Removed cURL and fopen-wrapper support for storing banners, added a 
			  ftp emulation library provided by TOMO <groove@spencernetwork.org>  (Niels)
			+ Added native support for flash banners, based on code of the 
			  phpAdsPlus project by Stefan aka. dandra  (Niels)
			+ Added a confirmation dialogbox, for deleting and resetting statistics (Helmut Wirth)
			+ Added welcome message to the client interface, which can be modified
                          to include personal contact information for example  (Niels)
			+ Add secondary tab bar to the navigation  (Niels)

			+ GUI
			  - Added list order variants (ID or alphabetic) for administration, statistics and zones of 
			    clients, campaigns and banners (Stefan) 20011010

			+ Zones
			  - Added support for zones  (Niels)
			  - Zones can be linked from the banner  (Niels) 20011007
			
			+ ACLs
			  The ACL routines have been rewritten. This is a very big change and possibly